--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -2,7 +2,7 @@
 .containerServices {
     width: 100%;
     height: 100%;
-    padding: 10% 8% 10% 8%;
+    padding: 5% 8%;
     font-family: 'Eczar';
 }
 
@@ -16,7 +16,7 @@
 
 .containerServices h1::after {
     content: '';
-    background: var(--darkgold);
+    background: var(--darkgreen);
     width: 20%;
     height: 5px;
     position: absolute;
@@ -27,8 +27,8 @@
 
 .row {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 20px;
 }
 
 .service {
@@ -39,13 +39,13 @@
     cursor: pointer;
     background: transparent;
     transition: transform 0.5s, background 0.5s;
-    border: 2px solid var(--darkgold);
+    border: 2px solid var(--darkgreen);
 }
 
 .service i {
     font-size: 40px;
     margin-bottom: 10px;
-    color: var(--darkgold);
+    color: var(--darkgreen);
 }
 
 .service h2 {
@@ -54,13 +54,20 @@
 }
 
 .service:hover {
-    background: var(--darkgold);
+    background: var(--darkgreen);
     color: #fff;
     transform: scale(1.05);
 }
 
 .service:hover i {
     color: #fff;
+}
+
+
+.service p span{
+    color: var(--darkgreen);
+    font-weight: bold;
+    font-size: 20px;
 }
 
 /* MOBILE */
@@ -74,7 +81,6 @@
 @media (min-width: 1800px) {
     .containerServices h1::after {
         content: '';
-        background: var(--darkgold);
         width: 14%;
         height: 5px;
         position: absolute;
