--- a/src/components/testimonials/Testimonials.css
+++ b/src/components/testimonials/Testimonials.css
@@ -6,15 +6,16 @@
 }
 
 #box {
-    width: 80vw;
-    max-width: 40em;
     min-height: 20em;
-    display: grid;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     font-family: "Eczar";
-    padding-bottom: 10%;
+    padding-bottom: 20%;
+    flex-direction: column;
+    padding-top: 15%;
+    width: 50%;
 }
 
 #box h1 {
@@ -60,7 +61,7 @@
     padding-right: 5%;
     border-radius: 20px;
     border: 2px solid var(--darkgreen);
-    height: 180px;
+    height: 255px;
     font-family: 'Eczar';
 }
 
@@ -133,7 +134,7 @@
 @media only screen and (max-width: 934px) {
     .carousel-root {
         outline: 0;
-        width: 93% !important;
+        width: 85% !important;
         margin: auto !important;
     }
 
@@ -145,15 +146,15 @@
         background: #ffffff;
         border: 2px solid var(--darkgreen);
         font-family: 'Eczar';
-        margin-top: 5%;
-        width: 88%;
+        margin-top: 0%;
+        width: 80%;
         margin-left: auto;
         margin-right: auto;
-        padding-top: 8%;
+        padding-top: 6%;
         padding-bottom: 12.5%;
         padding-left: 5%;
         padding-right: 5%;
-        height: 340px;
+        height: 200px;
     }
 }
 
@@ -161,6 +162,17 @@
 @media screen and (max-width: 767px) {
     #box h1 {
         margin-bottom: -30px;
+    }
+    #box{
+        width: 100%;
+    }
+    .myCarousel {
+        width: 100%;
+        height: 241px;    
+        padding-top: 10%;
+    }
+    #box h1::after {
+        width: 100%;
     }
 }
 
@@ -178,6 +190,21 @@
 
     footer {
         padding-bottom: 2rem;
+    }
+    #box {
+        min-height: 20em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: "Eczar";
+        padding-bottom: 15%;
+        flex-direction: column;
+        padding-top: 10%;
+        width: 50%;
+    }
+    .myCarousel {
+        height: 220px;
     }
 }
 
@@ -198,7 +225,6 @@
 /* IPHONE 8 */
 @media only screen and (max-width: 427px) and (min-width: 375px) {
     .containerTestimonials {
-        height: 60vh;
         display: flex;
         justify-content: center;
     }
