--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,21 +1,21 @@
 
 footer {
-    background-color: var(--darkgold);
+    background-color: var(--green);
     display: grid;
-    justify-content: space-between;
+    justify-content: center;
     text-align: center;
     align-items: center;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(3, 33%);
     min-height: 12em;
-    margin-top: -5rem;
+    margin-top: -4rem;
 }
 
 .containerLogo img {
-    width: 40%;
+    width: 60%;
 }
 
 .containerSocialNetwork {
-    color: var(--colorletraclaro);
+    color: var(--white);
     gap: 50px;
     display: flex;
     flex-direction: row;
@@ -23,48 +23,54 @@ footer {
 }
 
 .containerSocialNetwork i {
-    color: var(--colorgrisclaro);
+    color: var(--white);
     font-size: 3rem;
     transition: .2s ease-in-out;
 }
 
 .containerSocialNetwork i:hover {
-    color: var(--colornegro);
+    color: var(--letter);
     font-size: 3rem;
     transition: .2s ease-in-out;
 }
 
-.copyright {
-    background-color: var(--lightgold);
-    text-align: center;
-    min-height: 5vh;
-    align-items: center;
+.containerInfoFooter{
     display: flex;
-    justify-content: center;
-}
-
-.copyright a {
-    text-decoration: none;
-}
-
-.footerText {
-    color: var(--colornegro);
-    letter-spacing: 2px;
+    flex-direction: column;
+    align-items: start;
+    margin-left: 20%;
     font-family: 'Eczar';
-    text-decoration: none;
-    transition: .2s ease-in-out;
 }
 
-.footerText:hover {
-    color: var(--colorletraclaro);
+.infoTitleFooter{
+    color: var(--white);
+    font-weight: 600;
+}
+
+.infoDescFooter{
+    text-decoration: none;
+    color: var(--yellow);
+    font-weight: 500;
+}
+
+.infoDescFooter a{
+    color: var(--yellow);
+    text-decoration: none;
+}
+
+.infoDescFooter a:hover{
+    color: var(--letter);
+    text-decoration: none;
 }
 
 /* MOBILE */
 @media screen and (max-width: 767px) {
     footer {
         grid-template-columns: none;
-        grid-template-rows: repeat(2, 50%);
+        grid-template-rows: repeat(3, 30%);
         margin-top: -1rem;
+        min-height: 30em;
+        padding: 5% 0%;
     }
 
     .containerLogo img {
@@ -77,6 +83,9 @@ footer {
 
     .footerText {
         letter-spacing: 0px;
+    }
+    .containerLogo {
+        align-self: end;
     }
 }
 
